# claude-in-codex

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CODEOWNERS  COMPATIBILITY.md  README.md  SECURITY.md  plan-issue-35.md  plan-issue.md  prek.toml  pyproject.toml
.agents/plugins/: marketplace.json
.agents/skills/agent-friendly-github/: SKILL.md
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  publish.yml  test.yml
plugins/cc-plugin-codex/: .mcp.json
plugins/cc-plugin-codex/.codex-plugin/: plugin.json
plugins/cc-plugin-codex/skills/collaborating-with-claude/: SKILL.md
plugins/claude-in-codex/: .mcp.json
plugins/claude-in-codex/.codex-plugin/: plugin.json
plugins/claude-in-codex/skills/collaborating-with-claude/: SKILL.md
scripts/: check_claude_contract.py
skills/collaborating-with-claude/: SKILL.md
src/cc_plugin_codex/: __init__.py  claude.py  cli_contract.py  config.py  context.py  jobs.py  normalize.py  preflight.py  schemas.py  server.py
src/claude_in_codex/: __init__.py  claude.py  claude_models.py  cli_contract.py  config.py  context.py  jobs.py  normalize.py  preflight.py  schemas.py  server.py
tests/: conftest.py  test_check_claude_contract.py  test_claude.py  test_claude_models.py  test_cli_contract.py  test_config.py  test_context.py  test_docs_consistency.py  test_fingerprint.py  test_golden_envelope.py  test_integration.py  test_jobs.py  test_mcp_config.py  test_normalize.py  test_preflight.py  test_schemas.py  test_server.py
tests/golden/: claude_envelope.json
