[project]
name = "cc-plugin-codex"
version = "0.1.3"
description = "Call Claude Code from Codex for bounded, independent code review and second opinions"
requires-python = ">=3.10"
dependencies = [
    "anyio>=4",
    "fastmcp>=3.4",
    "pydantic>=2",
]

[project.scripts]
cc-plugin-codex-mcp = "cc_plugin_codex.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cc_plugin_codex"]

[dependency-groups]
dev = [
    "prek>=0.4.4",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7",
    "ruff>=0.15.15",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=cc_plugin_codex --cov-report=term-missing -m 'not integration'"
markers = [
    "integration: live tests requiring the claude CLI; opt in with `pytest -m integration --no-cov`",
]

[tool.coverage.run]
source = ["src/cc_plugin_codex"]

[tool.coverage.report]
show_missing = true
