[project]
name = "cc-plugin-codex"
version = "0.1.3"
description = "Call Claude Code from Codex for bounded, independent code review and second opinions"
requires-python = ">=3.10"
dependencies = [
    "anyio>=4",
    "fastmcp>=3.4",
    "pydantic>=2",
]

[project.scripts]
cc-plugin-codex-mcp = "cc_plugin_codex.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cc_plugin_codex"]

[dependency-groups]
dev = [
    "prek>=0.4.4",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7",
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 100
# Matches requires-python (>=3.10); bump alongside the floor if it moves to 3.11.
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "PIE", "RUF", "PL", "PT", "TID", "TC", "ARG", "PTH"]
ignore = [
    "PLR0913",  # too-many-args: tool handlers legitimately take many params
    "PLR0911",  # too-many-returns: dispatch/classify handlers branch per error case
    "PLR0912",  # too-many-branches: same — error-path-heavy handlers
    "PLR2004",  # magic-value: noisy for literals
]

[tool.ruff.lint.per-file-ignores]
# Tests use asserts, fixtures-as-args, private access, inline literals, broad
# raises, and comma-string parametrize names by design.
"tests/**" = ["ARG", "PLR2004", "S101", "TC001", "TC002", "TC003", "PT006", "PT011", "PT018", "PLC0415", "RUF059", "SLF001"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=cc_plugin_codex --cov-report=term-missing --strict-markers --strict-config -m 'not integration'"
markers = [
    "integration: live tests requiring the claude CLI; opt in with `pytest -m integration --no-cov`",
]

[tool.coverage.run]
source = ["src/cc_plugin_codex"]

[tool.coverage.report]
fail_under = 95
show_missing = true
